// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchForm should be rendered correctly with empty query 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <div
    className="input-group"
  >
    <input
      autoCapitalize="off"
      autoComplete="off"
      className="form-control search-input"
      maxLength={512}
      onChange={[Function]}
      placeholder="Search for GIFs"
      spellCheck={false}
      type="search"
      value=""
    />
    <div
      className="input-group-append"
    >
      <button
        className="btn btn-dark search-submit"
        onClick={[Function]}
        title="Search"
        type="submit"
      >
        <span
          className="oi oi-magnifying-glass"
        />
      </button>
    </div>
  </div>
</form>
`;

exports[`SearchForm should be rendered correctly with non-empty query 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <div
    className="input-group"
  >
    <input
      autoCapitalize="off"
      autoComplete="off"
      className="form-control search-input"
      maxLength={512}
      onChange={[Function]}
      placeholder="Search for GIFs"
      spellCheck={false}
      type="search"
      value="kittens"
    />
    <div
      className="input-group-append"
    >
      <button
        className="btn btn-light search-reset"
        onClick={[Function]}
        title="Reset search"
        type="button"
      >
        <span
          className="oi oi-x"
        />
      </button>
    </div>
    <div
      className="input-group-append"
    >
      <button
        className="btn btn-dark search-submit"
        onClick={[Function]}
        title="Search"
        type="submit"
      >
        <span
          className="oi oi-magnifying-glass"
        />
      </button>
    </div>
  </div>
</form>
`;
